--- a/style.css
+++ b/style.css
@@ -616,13 +616,13 @@ body {
 /* مشغل الفيديو */
 .video-player {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   min-height: 100vh;
 }
 
 .video-player iframe {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   border-radius: var(--border-radius);
 }
 
