--- a/style.css
+++ b/style.css
@@ -627,7 +627,7 @@ body {
 /* مشغل الفيديو محسن */
 .video-player {
   width: 100vh;
-  height: 100%;
+  height: 150vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -637,7 +637,7 @@ body {
 
 .video-player iframe {
   width: 100%;
-  height: 100%;
+  height: 200vh;
   border: none;
   max-width: 100%;
   max-height: 100%;
