--- a/style.css
+++ b/style.css
@@ -626,8 +626,8 @@ body {
 
 /* مشغل الفيديو محسن */
 .video-player {
-  width: 100vh;
-  height: 150vh;
+  width: 100%;
+  height: 500vh;
   display: flex;
   align-items: center;
   justify-content: center;
